plugins {
    id 'java'
    id "maven-publish"
}

group = 'fr.robotv2.anchor'
version = '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java'
    apply plugin: "maven-publish"

    group = 'fr.robotv2.anchor'
    version = '1.0-SNAPSHOT'

    // java 17
    sourceCompatibility = 17
    targetCompatibility = 17

    java {
        withSourcesJar()
        withJavadocJar()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.jetbrains:annotations:24.0.1'
        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }

    test {
        useJUnitPlatform()
    }

    compileJava {
        options.encoding = "UTF-8"
    }
}